--- a/src/UsingDotNET.DirMover.csproj
+++ b/src/UsingDotNET.DirMover.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="CliWrap" Version="3.6.*" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.*" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
   </ItemGroup>
 
   <ItemGroup>
