Play with C# 12: Primary Constructors

--- a/src/UsingDotNET.DirMover.csproj
+++ b/src/UsingDotNET.DirMover.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <AssemblyName>DirMover</AssemblyName>
+      <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
