--- a/src/UsingDotNET.DirMover.csproj
+++ b/src/UsingDotNET.DirMover.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="Dapper.Contrib" Version="2.0.*" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.*" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.*" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.*" />
   </ItemGroup>
 
