--- a/src/UsingDotNET.DirMover.csproj
+++ b/src/UsingDotNET.DirMover.csproj
@@ -17,9 +17,9 @@
 
     <ItemGroup>
         <PackageReference Include="CliWrap" Version="3.6.*" />
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.*" />
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.*" />
         <PackageReference Include="Dapper.Contrib" Version="2.0.*" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.*" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.*" />
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.*" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
         <PackageReference Include="System.Data.SQLite.Core" Version="1.0.*" />
